# calibrel

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  calibrel_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f6a3478a3b1a3dd0834ab41dda3abf3b.html  files.html  index.html  namespacecalrel.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
cmake/: package-config.cmake.in
doc/: Doxyfile.in  mainpage.md
include/calibrel/: calibrel.hpp
search/: all_0.js  functions_0.js  namespaces_0.js  searchdata.js
src/: calibDLR11.cpp  calibrel.cpp
test/: test_calibDLR11.cpp  test_calibrel.cpp  test_stereocalib.cpp
